--- a/IBM-Coffee-FrontEnd/src/app/app.component.html
+++ b/IBM-Coffee-FrontEnd/src/app/app.component.html
@@ -1,2 +1,11 @@
 
-<router-outlet></router-outlet>
+
+<app-topmenu></app-topmenu>
+<mat-drawer-container class="app-container">
+<mat-drawer mode="side" opened>
+    <app-leftnav></app-leftnav>
+</mat-drawer>
+<mat-drawer-content>
+  <router-outlet></router-outlet>
+</mat-drawer-content>
+</mat-drawer-container>
