Updated Layout with some adjustments

--- a/IBM-Coffee-FrontEnd/src/app/layout/topmenu/topmenu.component.html
+++ b/IBM-Coffee-FrontEnd/src/app/layout/topmenu/topmenu.component.html
@@ -1,1 +1,7 @@
-<p>  Coffee App Logo -->   Top Menu Items</p>
+<mat-toolbar color="accent">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+     <mat-icon>menu</mat-icon>
+   </button>
+   <span class="app-title">IBM COffee App</span>
+   <span class="example-spacer"></span>
+ </mat-toolbar>
