--- a/IBM-Coffee-FrontEnd/src/app/app.component.html
+++ b/IBM-Coffee-FrontEnd/src/app/app.component.html
@@ -2,10 +2,10 @@
 
 <app-topmenu></app-topmenu>
 <mat-drawer-container class="app-container">
-<mat-drawer mode="side" opened>
+<mat-drawer mode="side" opened class="app-leftnav">
     <app-leftnav></app-leftnav>
 </mat-drawer>
-<mat-drawer-content>
+<mat-drawer-content class="app-content">
   <router-outlet></router-outlet>
 </mat-drawer-content>
 </mat-drawer-container>
