--- a/IBM-Coffee-FrontEnd/src/app/layout/leftnav/leftnav.component.html
+++ b/IBM-Coffee-FrontEnd/src/app/layout/leftnav/leftnav.component.html
@@ -1,5 +1,5 @@
 <mat-list role="list">
-    <mat-list-item role="listitem">Module 1</mat-list-item>
+    <mat-list-item role="listitem"><a href="#">Coffee</a></mat-list-item>
     <mat-list-item role="listitem">Module 2</mat-list-item>
     <mat-list-item role="listitem">Module 3</mat-list-item>
   </mat-list>
