--- a/IBM-Coffee-FrontEnd/src/app/layout/topmenu/topmenu.component.html
+++ b/IBM-Coffee-FrontEnd/src/app/layout/topmenu/topmenu.component.html
@@ -2,6 +2,6 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
      <mat-icon>menu</mat-icon>
    </button>
-   <span class="app-title">IBM COffee App</span>
+   <span class="app-title">IBM Coffee App</span>
    <span class="example-spacer"></span>
  </mat-toolbar>
